<resources>
    <string name="app_name" translatable="false">DrakePlayer</string>
    <string name="template_artista">Artista: %s</string>
    <string name="template_titulo">Titulo: %s</string>
    <string name="template_album">Album: %s</string>
    <string name="template_duracion">Duracion: %s segundos</string>
    <string name="recomendados">Recomendados</string>
    <string name="ultimas_reproducciones">Ultimas Reproducciones</string>
    <string name="tracks" translatable="false">Tracks</string>
    <string name="artistas">Artistas</string>
    <string name="top_artistas">Top Artistas</string>
    <string name="albumes">Albumes</string>
    <string name="top_albumes">Top Albumes</string>
    <string name="home">Home</string>
    <string name="buscar">Buscar</string>
    <string name="favoritos">Favoritos</string>
    <string name="tracks_artistas_albumes">Tracks, artistas, álbumes...</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Iniciar_Sesion">Iniciar Sesion</string>
    <string name="facebook_app_id" translatable="false">922833414858350</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb922833414858350</string>
    <string name="ver_tracks">Ver todos los tracks ➝</string>
    <string name="ver_artistas">Ver todos los artistas ➝</string>
    <string name="ver_albumes">Ver todos los álbumes ➝</string>
    <string name="en_busqueda">\" %s \" en búsqueda</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="o">o</string>
    <string name="registrarse">Registrarse</string>
    <string name="bienvenido_denuevo">Bienvenido de nuevo!</string>
    <string name="slogan">Toda tu música. Justo aquí, en un solo lugar.</string>
    <string name="top_tracks">Top Tracks del artista</string>
    <string name="agregar_a_fav">Agregar a favoritos</string>
    <string name="en_fav">En favoritos</string>
    <string name="encontramusica">Encontra tu musica, nosotros te la guardamos!</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="google_idClient" translatable="false">88469903863-biig4dudq9kgk78pvb3r512a16dsk7fq.apps.googleusercontent.com</string>
    <string name="Email">Email</string>
    <string name="busquedas_recientes">Busquedas recientes</string>
    <string name="oops" translatable="false">Ooops!</string>
    <string name="no_hay_inet">Parece que no hay conexión a internet.</string>
    <string name="reintentar">Reintentar</string>


</resources>
