<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".view.FavoritosFragment">

    <TextView
        android:id="@+id/fragmentFavoritosTextViewTitulo"
        style="@style/title_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/favoritos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/fragmentFavoritosTextViewAlbumes"
        style="@style/celdahome_album_artista_celda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/albumes"
        app:layout_constraintStart_toStartOf="@id/fragmentFavoritosTextViewTitulo"
        app:layout_constraintTop_toBottomOf="@id/fragmentFavoritosTextViewTitulo" />

    <TextView
        android:id="@+id/fragmentFavoritosTextViewArtistas"
        style="@style/celdahome_album_artista_celda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/artistas"
        app:layout_constraintBottom_toBottomOf="@id/fragmentFavoritosTextViewAlbumes"
        app:layout_constraintStart_toEndOf="@id/fragmentFavoritosTextViewAlbumes"
        app:layout_constraintTop_toTopOf="@id/fragmentFavoritosTextViewAlbumes" />

    <TextView
        android:id="@+id/fragmentFavoritosTextViewTracks"
        style="@style/celdahome_album_artista_celda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/tracks"
        app:layout_constraintBottom_toBottomOf="@id/fragmentFavoritosTextViewAlbumes"
        app:layout_constraintStart_toEndOf="@id/fragmentFavoritosTextViewArtistas"
        app:layout_constraintTop_toTopOf="@id/fragmentFavoritosTextViewAlbumes" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/fragmentFavoritosViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentFavoritosTextViewAlbumes" />


</androidx.constraintlayout.widget.ConstraintLayout>