<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LoginInicioFragment">


    <ImageView
        android:id="@+id/fragmentLoginInicio_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/iron_maiden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragmentLoginInicio_slogan"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/slogan"
        android:textColor="@color/accent"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentLoginInicio_logo" />

    <Button
        android:id="@+id/fragmentLoginInicio_buttonLogin"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@color/primary_elevation"
        android:text="@string/Iniciar_Sesion"
        android:textColor="@color/accent"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentLoginInicio_slogan" />

    <Button
        android:id="@+id/fragmentLoginInicio_buttonRegister"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/primary_elevation"
        android:text="@string/registrarse"
        android:textColor="@color/accent"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentLoginInicio_buttonLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>