<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeFragment"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/primary_elevation_12dp"
            android:layout_marginVertical="10dp">
        </View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/primary_elevation"
            android:text="@string/recomendados"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/text_title_home"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fargmentHome_RecyclerDeRecomendados"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/primary_elevation_12dp"
            android:layout_marginVertical="10dp">
        </View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/primary_elevation"
            android:text="@string/ultimas_reproducciones"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/text_title_home"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fargmentHome_RecyclerDeUltimasReproducciones"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/primary_elevation_12dp"
            android:layout_marginVertical="10dp">
        </View>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/primary_elevation"
            android:text="@string/artistas"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/text_title_home"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fargmentHome_RecyclerDeArtistas"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/primary_elevation_12dp"
            android:layout_marginVertical="10dp">
        </View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/primary_elevation"
            android:text="@string/albumes"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/text_title_home"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fargmentHome_RecyclerDeAlbumes"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/primary_elevation_12dp"
            android:layout_marginVertical="10dp">
        </View>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>