<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.DetailArtistFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/fragmentDetailArtistAppBar"
        android:layout_width="match_parent"
        android:layout_height="320dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                app:cardCornerRadius="125dp"
                app:layout_collapseMode="parallax">

                <ImageView
                    android:id="@+id/fragmentDetailArtistCollapsingToolbarImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragmentDetailArtistTextViewNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:breakStrategy="balanced"
                android:gravity="center"
                android:text="Nombre Artista"
                android:textColor="#fff"
                android:textSize="24dp"
                android:textStyle="bold" />

            <ToggleButton
                android:id="@+id/fragmentDetailArtistButtonAgregarFavoritos"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/tbutton"
                android:textColor="#fff"
                android:textOff="@string/agregar_a_fav"
                android:textOn="@string/en_fav" />

            <TextView
                style="@style/title_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/albumes" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragmentArtistDetail_RecyclerViewAlbumes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp" />

            <TextView
                style="@style/title_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/top_tracks" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragmentArtistDetail_RecyclerViewTopTracks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>