<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".view.fragment.SearchFragment">

    <TextView
        android:id="@+id/fragmentSearchTextView"
        style="@style/title_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/buscar"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/fragmentSearchCardViewBuscar"
        android:layout_width="350dp"
        android:layout_height="46dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/text_subtitles"
        app:cardCornerRadius="23dp"
        app:layout_constraintBottom_toTopOf="@+id/fragmentSearchTextViewRecientes"
        app:layout_constraintStart_toStartOf="@id/fragmentSearchTextView"
        app:layout_constraintTop_toBottomOf="@id/fragmentSearchTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_search_white_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:hint="@string/tracks_artistas_albumes"
                android:textSize="16dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/fragmentSearchTextViewRecientes"
        style="@style/title_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="25dp"
        android:text="@string/busquedas_recientes"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="@id/fragmentSearchTextView"
        app:layout_constraintTop_toBottomOf="@id/fragmentSearchCardViewBuscar"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragmentSearchRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentSearchTextViewRecientes" />

</androidx.constraintlayout.widget.ConstraintLayout>